--- a/admin.html
+++ b/admin.html
@@ -59,5 +59,46 @@
         </div>
 
     </div>
+
+    <script>
+        let vehicleImgUrl="https://coding-platform.s3.amazonaws.com/dev/lms/tickets/5e80fcb6-3f8e-480c-945b-30a5359eb40e/JNmYjkVr3WOjsrbu.png"
+        let vehicles=[]
+        let nextId=1;
+
+        const form =document.getElementById("fleetForm");
+        const regNoInput=document.getElementById("regNo");
+        const categoryInput=document.getElementById("category");
+        const driverInput=document.getElementById("driver");
+        const availabilityInput=document.getElementById("availability");
+
+        form.addEventListener("submit",function(e){
+            e.preventDefault();
+            const regNo=regNoInput.value.trim();
+            const category=categoryInput.value;
+            const driver =driverInput.value.trim();
+
+            if(regNo==="" || category==="" || driver==="" || status===""){
+                alert("Please Fill all fields")
+                return;
+            }
+            const newVehicles={
+                id:nextId,
+                regNo:regNo,
+                category:category,
+                driver:driver,
+                status:status
+            };
+            nextId=nextId+1;
+            vehicles.push(newVehicles);
+            regNoInput.value="";
+            categoryInput.value="";
+            driverInput.value="";
+            availabilityInput.value="";
+
+            renderCards();
+        });
+
+        
+    </script>
 </body>
 </html>
